--- a/src/install.txt
+++ b/src/install.txt
@@ -1,6 +1,6 @@
 npm i -g vue-cli
 vue init webpack
-npm install mint-ui -S
+npm i element-ui -S
 
 npm install vuex --save
 npm install axios --save
