调整整体结构

--- a/src/install.txt
+++ b/src/install.txt
@@ -5,3 +5,5 @@ npm i element-ui -S
 npm install vuex --save
 npm install axios --save
 npm install qs --save
+
+npm install throttle-debounce --save
